--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <HEAD>
     <script type="text/javascript">
         window.Jendri = {
-            source: "",
+            source: "/minedriod/",
             container: '#main_content',
-            debug: true,
-//            siteVersion: '1.9',
+//            debug: true,
+            siteVersion: '1.9',
             interface: 'docs',
             home: 'docs'
         }
