--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <HEAD>
     <script type="text/javascript">
         window.Jendri = {
-            source: "./",
             container: '#main_content',
-//            debug: true,
-            siteVersion: '1.9.1',
+            debug: true,
+//            siteVersion: '1.9.1',
             interface: 'docs',
             home: 'docs'
         }
