--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         window.Jendri = {
             container: '#main_content',
             debug: true,
-//            siteVersion: '1.9.1',
+            siteVersion: '1.9.2',
             interface: 'docs',
             home: 'docs'
         }
